--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 buddy-alloc = { version = "0.4.1", optional = true }
+derive_builder = "0.11.2"
+heapless = "0.7.14"
 
 [profile.release]
 opt-level = "z"
